syntax = "proto3";

package com.github.bredtape.gateway.nats_transfer.v1;

option go_package = "github.com/bredtape/gateway/nats_sync/v1";


// nats sync service, to initiate sync of a stream from one deployment to another.
// To bootstrap the NatsSyncService itself, all deployments must have the Subscribe requests published to their designated nats stream for this service (which matches either the source or target deployment)
service NatsSyncService {
  // Subscribe to a stream
  // Only one subscription can be active pr combination of source_deployment, source_stream_name and target_deployment
  // You cannot change a subscription but must send a UnsubscribeRequest, then a new SubscribeRequest
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);

  // Unsubscribe from a stream. See note on Subscribe
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);
}

// subscribe request
message SubscribeRequest {
  // the deployment to subscribe from
  string source_deployment = 1;

  // the deployment to send the reply back to
  string reply_deployment = 2;

  // the target deployment, where the messages are to be published.
  string target_deployment = 3;

  // source stream name
  string source_stream_name = 4;

  // target stream name
  // subject hierachy must match the source stream
  string target_stream_name = 5;

  // subscription filters used at the source for this stream
  repeated string subject_filters = 6;

  ConsumerConfig consumer_config = 7;
}

message SubscribeResponse {
  // the deployment to subscribe from
  string source_deployment = 1;

  // the deployment to send the reply back to
  string reply_deployment = 2;

  // the deployment the messages are to be published
  string target_deployment = 3;

  // source stream name
  string source_stream_name = 4;

  // target stream name
  // subject hierachy must match the source stream
  string target_stream_name = 5;

  // subscription filters used at the source for this stream
  repeated string subject_filters = 6;

  ConsumerConfig consumer_config = 7;
}

// unsubscribe request
message UnsubscribeRequest {
  // the deployment to unsubscribe from
  string source_deployment = 1;

  // the deployment to send the reply back to
  string reply_deployment = 2;

  // the deployment the messages are to be published
  string target_deployment = 3;

  // source stream name
  string source_stream_name = 4;

  // target stream name
  // subject hierachy must match the source stream
  string target_stream_name = 5;

  // subscription filters used at the source for this stream
  repeated string subject_filters = 6;
}

message UnsubscribeResponse {
  // the deployment to unsubscribe from
  string source_deployment = 1;

  // the deployment to send the reply back to
  string reply_deployment = 2;

  // the deployment the messages are to be published
  string target_deployment = 3;

  // source stream name
  string source_stream_name = 4;

  // target stream name
  // subject hierachy must match the source stream
  string target_stream_name = 5;

  // subscription filters used at the source for this stream
  repeated string subject_filters = 6;

}

message ConsumerConfig {
  DeliverPolicy deliver_policy = 1;

  // used when deliver policy is by start sequence
  uint64 opt_start_seq = 2;

  // used when deliver policy is by start time. In seconds since Unix epoch
  double opt_start_time = 3;
}

enum DeliverPolicy {
  // DeliverAllPolicy starts delivering messages from the very beginning of a
	// stream. This is the default.
	DELIVER_POLICY_ALL = 0;

	// DeliverLastPolicy will start the consumer with the last sequence
	// received.
  DELIVER_POLICY_LAST = 1;

	// DeliverNewPolicy will only deliver new messages that are sent after the
	// consumer is created.
	DELIVER_POLICY_NEW = 2;

	// DeliverByStartSequencePolicy will deliver messages starting from a given
	// sequence configured with OptStartSeq in ConsumerConfig.
	DELIVER_POLICY_BY_START_SEQUENCE = 3;

	// DeliverByStartTimePolicy will deliver messages starting from a given time
	// configured with OptStartTime in ConsumerConfig.
	DELIVER_POLICY_BY_START_TIME = 4;

	// DeliverLastPerSubjectPolicy will start the consumer with the last message
	// for all subjects received.
	DELIVER_POLICY_LAST_PER_SUBJECT = 5;
}


// batch of messages belonging to the same deployment, stream name and subscription
message MsgBatch {
  // source stream name
  string source_stream_name = 1;

  // subscription filters used at the source for this stream
  repeated string subject_filters = 2;

  ConsumerConfig consumer_config = 3;

  // messages matching the stream name and subject filters
  // ordered by sequence
  repeated Msg messages = 4;
}

// to mirror nats Msg (https://github.com/nats-io/nats.go/blob/main/nats.go)
message Msg {
  string subject = 1;

  // headers. Separate multiple values with ','. The values must not contain a ,
  map<string, string> headers = 2;

  bytes data = 3;

  // metadata fields

  // source sequence
  uint64 source_sequence = 4;

  // sequence of the previous Msg that belongs to the same stream.
  // May have gaps (depending on the source subscription filter used).
  // This is needed to ensure order and completeness of all Msg
  // NB: The first message received when starting a subscription may be 0
  uint64 previous_source_sequence = 5;

  // when the Msg was published to the source. In seconds since Unix epoch
  double publish_timestamp = 6;
}

// acknowledge combination of stream name, subject and sequence
message Acknowledge {
  string source_stream_name = 1;
  uint64 source_sequence = 2;
  string subject = 3;

  // to indicate not-acknowledge, in which case the subscription will be restarted
  // If lowest_ack_sequence is set, the subscription will resume from that sequence
  bool is_nak = 4;

  // reason, should be specified when NAK
  // possible scenarios: message loss/corrupted, message missing (gap, have received newer but is missing some), rejected (because subscription is not active at the target deployment, or a conflicting subscription is active)
  string reason = 5;

  // lowest source sequence number succesfully received
  // This may help the source to fast-forward the subscription at startup
  uint64 lowest_source_sequence_received = 6;
}

// message exchange. Used for lower level exchange between deployments using other means of transport than nats
message MessageExchange {
  string to_deployment = 1;
  string from_deployment = 2;

  repeated Acknowledge acks = 3;
  repeated MsgBatch messages = 4;

  // timestamp of when this message has been sent
  // used to estimate latency when different deployments.
  // In seconds since Unix epoch
  double sent_timestamp = 5;
}

